--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "devDependencies": {
     "@babel/plugin-syntax-jsx": "^7.10.4",
     "@babel/types": "^7.10.5",
+    "babel-plugin-tester": "^9.2.0",
     "husky": "^4.2.5",
     "tsdx": "^0.13.2",
     "tslib": "^2.0.0",
