--- a/package.json
+++ b/package.json
@@ -23,19 +23,15 @@
       "pre-commit": "tsdx lint"
     }
   },
-  "prettier": {
-    "printWidth": 80,
-    "semi": true,
-    "singleQuote": true,
-    "trailingComma": "es5"
-  },
   "name": "babel-plugin-vtex-cms",
   "author": "VTEX",
   "module": "dist/babel-plugin-vtex-cms.esm.js",
   "devDependencies": {
     "@babel/plugin-syntax-jsx": "^7.10.4",
     "@babel/types": "^7.10.5",
+    "@vtex/prettier-config": "^0.3.1",
     "babel-plugin-tester": "^9.2.0",
+    "eslint-config-vtex": "^12.7.1",
     "husky": "^4.2.5",
     "tsdx": "^0.13.2",
     "tslib": "^2.0.0",
