--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@babel/plugin-syntax-jsx": "^7.10.4",
     "@babel/types": "^7.10.5",
     "@vtex/prettier-config": "^0.3.1",
+    "@babel/preset-typescript": "^7.10.4",
     "babel-plugin-tester": "^9.2.0",
     "eslint-config-vtex": "^12.7.1",
     "husky": "^4.2.5",
